--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kendall-dashboard-navy",
+  "name": "kendall-credentialing",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -13,9 +13,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.14",
     "vite": "^5.0.0"
   }
 }
