--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kendall-south-credential-tracker",
-  "version": "1.0.2",
+  "name": "kendall-dashboard",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -9,13 +9,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.0.0"
+    "react-dom": "^18.2.0",
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "tailwindcss": "^3.4.0",
+    "lucide-react": "^0.321.0"
   }
 }
