--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kendall-dashboard",
+  "name": "kendall-south-dashboard",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "tailwindcss": "^3.4.0",
-    "lucide-react": "^0.321.0"
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.14",
+    "vite": "^5.4.21"
   }
 }
