--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kendall-south-final-pdf",
+  "name": "kendall-south-final-portrait",
   "version": "1.0.0",
   "private": true,
   "scripts": {
