--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kendall-south-dashboard-summary",
+  "name": "kendallsouth-credentialing",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -12,10 +12,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.21"
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.0.0"
   }
 }
