--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tailwindcss": "^3.4.3",
     "postcss": "^8.4.35",
     "autoprefixer": "^10.4.18",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "@types/react": "^18.2.66",
+    "@types/node": "^20.11.30"
   }
 }
