--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "@supabase/supabase-js": "^2.48.0"
+},
+
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
